implemented double ended queues for the moves (makes more sence), and other irrelevant improvements